<resources>
    <string name="app_name">AndroidToolBox</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home_hello">"Bonjour"</string>
    <string name="home_lifespan">"Cycle de vie"</string>
    <string name="home_save"> "Sauvegarde"</string>
    <string name="home_permissions">"Permissions"</string>
    <string name="home_webservices">"Webservices"</string>
    <string name="lifespan_title">"Cycle de vie</string>
    <string name="lifespan_frag1">"Fragment 1"</string>
    <string name="lifespan_frag2">"Fragment 2"</string>
    <string name="lifespan_btn">"Changer fragment"</string>
    <string name="form_title">"Formulaire"</string>
    <string name="form_lastname">"Nom"</string>
    <string name="form_firstname">"Prénom"</string>
    <string name="form_date">"Date"</string>
    <string name="form_save">"Sauvegarder"</string>
    <string name="form_info">"Informations"</string>
    <string name="permissions_title">"Accès aux informations Android"</string>
    <string name="latitude">"Latitude : "</string>
    <string name="longitude">"Longitude : "</string>
    <string name="camera_choice">"Caméra"</string>
    <string name="gallery_choice">"Galerie"</string>
    <string name="choice">"Choisir :"</string>
    <string name="no_photo_choosen">"Aucune photo choisie"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="sexe">Sexe</string>
</resources>
