<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <TextView
        android:id="@+id/textForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/form_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLastName"
        android:layout_width="205dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textForm">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLastName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/form_lastname" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputFirstName"
        android:layout_width="204dp"
        android:layout_height="63dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLastName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_firstname" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/form_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDate" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputDate"
        android:layout_width="203dp"
        android:layout_height="50dp"
        android:hint="@string/form_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputFirstName" />

    <Button
        android:id="@+id/infosButton"
        android:layout_width="124dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:text="@string/form_info"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>